# palupi

./: .gitignore  Justfile  README.md  baru.text  docker-compose.dev.yml
backend/: Cargo.toml
backend/migrations/: 20250821044728_create_category.down.sql  20250821044728_create_category.up.sql  20250912122149_alter_category_columns.down.sql  20250912122149_alter_category_columns.up.sql  20250914100535_create_categories_table.down.sql  20250914100535_create_categories_table.up.sql  20250920090646_init_extensions.down.sql  20250920090646_init_extensions.up.sql  20250920090821_common_triggers.up.sql  20250920090945_languages.down.sql  20250920090945_languages.up.sql  20250920091110_categories.down.sql  20250920091110_categories.up.sql  20250920091301_category_translations.down.sql  20250920091301_category_translations.up.sql  20250920091446_seed_languages.down.sql  20250920091446_seed_languages.up.sql  20250920091614_require_default_translation.down.sql  20250920091614_require_default_translation.up.sql
backend/src/: main.rs
backend/src/app/: mod.rs  route.rs
backend/src/core/: mod.rs
backend/src/core/database/: db.rs  db_config.rs  mod.rs
backend/src/core/errors/: error.rs  map_db_err.rs  mod.rs
backend/src/core/response/: global_response.rs  mod.rs
backend/src/features/categories/: dto.rs  mod.rs
backend/src/features/categories/adapters/: create_category.rs  get_all_category.rs  get_by_id_category.rs  hard_delete_category.rs  mod.rs  repo_sqlx.rs  soft_delete_category.rs  update_category.rs
backend/test/http/: category.http
contract/: palupi.v1.yaml
(+83 files in other folders)
