[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "18.0.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
